compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_item@duplicate_struct.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {} struct Foo { }"
---
× error[LM3028]: duplicate definition
   ╭───────────
 1 │ struct Foo {} struct Foo { }
   │                      ^^^ item Foo is already defined within this file
   ∶ 
 1 │ struct Foo {} struct Foo { }
   │        ^^^ original definition found here
   ╰──
